changed slidseshow to hopefully fix flicker issue

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -169,11 +169,18 @@ body {
                     margin: 0;
                 }
 
-                #portfolio-laptop, #portfolio-laptop-animation {
+                #portfolio-laptop-animation-1, #portfolio-laptop-animation-2 {
                     width: 57%;
                     bottom: 0;
                     left: 15%;
+                }
+                
+                #portfolio-laptop-animation-1 {
                     z-index: 6;
+                }
+                
+                #portfolio-laptop-animation-2 {
+                    z-index: 5;
                 }
 
                 #portfolio-shell-mobile {
@@ -184,11 +191,18 @@ body {
                     z-index: 9;
                 }
 
-                #portfolio-mobile, #portfolio-mobile-animation {
+                #portfolio-mobile-animation-1, #portfolio-mobile-animation-2 {
                     width: 18.7%;
                     bottom: 0;
                     right: 10.5%;
+                }
+                
+                #portfolio-mobile-animation-1 {
                     z-index: 8;
+                }
+                
+                #portfolio-mobile-animation-2 {
+                    z-index: 7;
                 }
             }
         }
